--- a/apmap.html
+++ b/apmap.html
@@ -70,7 +70,7 @@
         <div class="icon">
             <div> <a href="https://www.youtube.com/channel/UC92a5k1eh5swf3OjiH-bLog"><img src="main07/you.png" alt=""></a></div>
             <div> <a href="https://www.instagram.com/amorepacificmuseum/?hl=en"><img src="main07/insta.png" alt=""></a></div>
-            <div> <a href="https://m.facebook.com/%EC%95%84%EB%AA%A8%EB%A0%88%ED%8D%BC%EC%8B%9C%ED%94%BD%EB%AF%B8%EC%88%A0%EA%B4%80-342457593073532/?__nodl&refsrc=deprecated&ref=external%3Awww.google.com&_rdr"><img src="img/main07/face.png" alt=""></a></div>
+            <div> <a href="https://m.facebook.com/%EC%95%84%EB%AA%A8%EB%A0%88%ED%8D%BC%EC%8B%9C%ED%94%BD%EB%AF%B8%EC%88%A0%EA%B4%80-342457593073532/?__nodl&refsrc=deprecated&ref=external%3Awww.google.com&_rdr"><img src="main07/face.png" alt=""></a></div>
         </div>
         <div class="button">
             <div> <a href="https://www.apgroup.com/int/ko/">
